[package]
name = "cloudfront_sign"
version = "0.2.2"
authors = ["Peter Evers <peter@promaton.com>"]
edition = "2018"
description = "Utility module for AWS CloudFront to generate signed URLs and cookies"
homepage = "https://www.promaton.com"
license = "MIT"
keywords = ["aws", "cloudfront", "signed-url", "signed-cookie"]
repository = "https://github.com/promaton/cloudfront-sign-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
base64 = "0.13.1"
rsa = "0.7.2"
pkcs1 = { version = "0.4.1", features = ["pem"] }
sha1 = { version = "0.10.5", features = ["oid"] }
